Fix build with make 3.82.  Patch from Ken Moffat.  Closes: AUDPLUG-276.

--- a/configure.ac
+++ b/configure.ac
@@ -166,8 +166,7 @@ AC_ARG_ENABLE(gio, [  --disable-gio           disable GIO support (default=enabl
  enable_gio=$enableval, enable_gio=yes)
 
 if test "x$enable_gio" = "xyes"; then
-    PKG_CHECK_MODULES(GIO, [gio-2.0 >= 2.0], [ADD_PC_REQUIRES([gio-2.0 >=
-     2.0])], [enable_gio=no])
+    PKG_CHECK_MODULES(GIO, [gio-2.0 >= 2.0], [ADD_PC_REQUIRES([gio-2.0 >= 2.0])], [enable_gio=no])
 fi
 
 if test "x$enable_gio" = "xyes"; then
