--- a/src/mms/Makefile
+++ b/src/mms/Makefile
@@ -7,6 +7,6 @@ include ../../extra.mk
 
 plugindir := ${plugindir}/${TRANSPORT_PLUGIN_DIR}
 
-CPPFLAGS += ${PLUGIN_CPPFLAGS} ${MOWGLI_CFLAGS}  ${GTK_CFLAGS} ${GLIB_CFLAGS}  ${ARCH_DEFINES} ${XML_CPPFLAGS} ${MMS_CFLAGS} -I../.. -Wall
+CPPFLAGS += ${PLUGIN_CPPFLAGS} ${MOWGLI_CFLAGS}  ${GTK_CFLAGS} ${GLIB_CFLAGS} ${ARCH_DEFINES} ${MMS_CFLAGS} -I../.. -Wall
 CFLAGS += ${PLUGIN_CFLAGS}
-LIBS += ${GTK_LIBS} ${GLIB_LIBS}  ${XML_LIBS} ${MMS_LIBS}
+LIBS += ${GTK_LIBS} ${GLIB_LIBS} ${MMS_LIBS}
