--- a/src/paranormal/Makefile
+++ b/src/paranormal/Makefile
@@ -29,5 +29,5 @@ include ../../extra.mk
 plugindir := ${plugindir}/${VISUALIZATION_PLUGIN_DIR}
 
 CFLAGS += ${PLUGIN_CFLAGS}
-CPPFLAGS += ${PLUGIN_CPPFLAGS} ${MOWGLI_CFLAGS}  ${GTK_CFLAGS} ${GLIB_CFLAGS}  ${ARCH_DEFINES} ${XML_CPPFLAGS} ${SDL_CFLAGS} -I../.. -I.
-LIBS += -lm ${GTK_LIBS} ${GLIB_LIBS}  ${XML_LIBS} ${SDL_LIBS}
+CPPFLAGS += ${PLUGIN_CPPFLAGS} ${MOWGLI_CFLAGS} ${GTK_CFLAGS} ${GLIB_CFLAGS} ${ARCH_DEFINES} ${XML_CFLAGS} ${SDL_CFLAGS} -I../.. -I.
+LIBS += -lm ${GTK_LIBS} ${GLIB_LIBS} ${XML_LIBS} ${SDL_LIBS}
