--- a/src/projectm-1.0/Makefile
+++ b/src/projectm-1.0/Makefile
@@ -11,5 +11,5 @@ plugindir := ${plugindir}/${VISUALIZATION_PLUGIN_DIR}
 LD = ${CXX}
 CFLAGS += ${PLUGIN_CFLAGS}
 CXXFLAGS += ${PLUGIN_CFLAGS}
-CPPFLAGS += ${PLUGIN_CPPFLAGS} ${MOWGLI_CFLAGS}  ${GTK_CFLAGS} ${GLIB_CFLAGS}  ${ARCH_DEFINES} ${XML_CPPFLAGS} ${GTKGLEXT_CFLAGS} ${LIBPROJECTM1_CFLAGS} -I../..
-LIBS += ${GTK_LIBS} ${GLIB_LIBS}  ${GTKGLEXT_LIBS} ${LIBPROJECTM1_LIBS}
+CPPFLAGS += ${PLUGIN_CPPFLAGS} ${MOWGLI_CFLAGS} ${GTK_CFLAGS} ${GLIB_CFLAGS} ${ARCH_DEFINES} ${GTKGLEXT_CFLAGS} ${LIBPROJECTM1_CFLAGS} -I../..
+LIBS += ${GTK_LIBS} ${GLIB_LIBS} ${GTKGLEXT_LIBS} ${LIBPROJECTM1_LIBS}
