--- a/extra.mk.in
+++ b/extra.mk.in
@@ -342,7 +342,7 @@ CHARDET_LIBS ?= @CHARDET_LIBS@
 SUBDIR_GUESS ?= @SUBDIR_GUESS@
 LIBNOTIFY_CFLAGS ?= @LIBNOTIFY_CFLAGS@
 LIBNOTIFY_LIBS ?= @LIBNOTIFY_LIBS@
-XML_CPPFLAGS ?= @XML_CPPFLAGS@
+XML_CFLAGS ?= @XML_CFLAGS@
 XML_LIBS ?= @XML_LIBS@
 CONTAINER_PLUGIN_DIR ?= @CONTAINER_PLUGIN_DIR@
 CONTAINER_PLUGINS ?= @CONTAINER_PLUGINS@
