--- a/src/neon/Makefile
+++ b/src/neon/Makefile
@@ -10,5 +10,5 @@ include ../../extra.mk
 plugindir := ${plugindir}/${TRANSPORT_PLUGIN_DIR}
 
 CFLAGS += ${PLUGIN_CFLAGS}
-CPPFLAGS += ${PLUGIN_CPPFLAGS} ${MOWGLI_CFLAGS}  ${GTK_CFLAGS} ${GLIB_CFLAGS}  ${ARCH_DEFINES} ${XML_CPPFLAGS} ${NEON_CFLAGS} -I../.. -D_RB_USE_GLIB
-LIBS += ${GTK_LIBS} ${GLIB_LIBS}  ${XML_LIBS} ${NEON_LIBS}
+CPPFLAGS += ${PLUGIN_CPPFLAGS} ${MOWGLI_CFLAGS} ${GTK_CFLAGS} ${GLIB_CFLAGS} ${ARCH_DEFINES} ${NEON_CFLAGS} -I../.. -D_RB_USE_GLIB
+LIBS += ${GTK_LIBS} ${GLIB_LIBS} ${NEON_LIBS}
