--- a/src/pls/Makefile
+++ b/src/pls/Makefile
@@ -7,5 +7,5 @@ include ../../extra.mk
 plugindir := ${plugindir}/${CONTAINER_PLUGIN_DIR}
 
 CFLAGS += ${PLUGIN_CFLAGS}
-CPPFLAGS += ${PLUGIN_CPPFLAGS} ${MOWGLI_CFLAGS}  ${GTK_CFLAGS} ${GLIB_CFLAGS}  ${ARCH_DEFINES} ${XML_CPPFLAGS} -I../..
-LIBS += ${GTK_LIBS} ${GLIB_LIBS}  ${XML_LIBS}
+CPPFLAGS += ${PLUGIN_CPPFLAGS} ${MOWGLI_CFLAGS} ${GTK_CFLAGS} ${GLIB_CFLAGS} ${ARCH_DEFINES} -I../..
+LIBS += ${GTK_LIBS} ${GLIB_LIBS}
