--- a/src/projectm/Makefile
+++ b/src/projectm/Makefile
@@ -9,5 +9,5 @@ include ../../extra.mk
 plugindir := ${plugindir}/${VISUALIZATION_PLUGIN_DIR}
 
 CFLAGS += ${PLUGIN_CFLAGS}
-CPPFLAGS += ${PLUGIN_CPPFLAGS} ${MOWGLI_CFLAGS}  ${GTK_CFLAGS} ${GLIB_CFLAGS}  ${ARCH_DEFINES} ${XML_CPPFLAGS} ${SDL_CFLAGS} ${LIBPROJECTM_CFLAGS} -I../..
-LIBS += ${GTK_LIBS} ${GLIB_LIBS}  ${SDL_LIBS} ${LIBPROJECTM_LIBS} -lprojectM
+CPPFLAGS += ${PLUGIN_CPPFLAGS} ${MOWGLI_CFLAGS} ${GTK_CFLAGS} ${GLIB_CFLAGS} ${ARCH_DEFINES} ${SDL_CFLAGS} ${LIBPROJECTM_CFLAGS} -I../..
+LIBS += ${GTK_LIBS} ${GLIB_LIBS} ${SDL_LIBS} ${LIBPROJECTM_LIBS} -lprojectM
