statusicon: Make use of libaudgui. Minor cleanup. Closes AUDPLUG-288.

--- a/src/statusicon/Makefile
+++ b/src/statusicon/Makefile
@@ -11,4 +11,4 @@ plugindir := ${plugindir}/${GENERAL_PLUGIN_DIR}
 
 CFLAGS += ${PLUGIN_CFLAGS}
 CPPFLAGS += ${PLUGIN_CPPFLAGS} ${BEEP_DEFINES} ${MOWGLI_CFLAGS} ${GTK_CFLAGS} ${GLIB_CFLAGS}  -I../..
-LIBS += ${GTK_LIBS} ${GLIB_LIBS}
+LIBS += ${GTK_LIBS} ${GLIB_LIBS} -laudgui
