flacng: Use existing file descriptor to read/write metadata. Cleanups.

--- a/src/flacng/Makefile
+++ b/src/flacng/Makefile
@@ -1,9 +1,10 @@
 PLUGIN = flacng${PLUGIN_SUFFIX}
 
-SRCS = plugin.c				\
-       tools.c				\
+SRCS = plugin.c \
+       tools.c \
        seekable_stream_callbacks.c	\
-       flac_compat112.c
+       flac_compat112.c \
+       metadata.c
 
 include ../../buildsys.mk
 include ../../extra.mk
