Compatibility fixes for POSIX threads on Windows.  Closes: AUDPLUG-304.

--- a/extra.mk.in
+++ b/extra.mk.in
@@ -251,6 +251,8 @@ PC_REQUIRES ?= @PC_REQUIRES@
 PKG_CONFIG ?= @PKG_CONFIG@
 PLUGIN_LDFLAGS ?= @PLUGIN_LDFLAGS@
 POSUB ?= @POSUB@
+PTHREAD_CFLAGS ?= @PTHREAD_CFLAGS@
+PTHREAD_LIBS ?= @PTHREAD_LIBS@
 RANLIB ?= @RANLIB@
 RESID_LIBS ?= @RESID_LIBS@
 SAMPLERATE_CFLAGS ?= @SAMPLERATE_CFLAGS@
