--- a/configure.ac
+++ b/configure.ac
@@ -183,6 +183,21 @@ PKG_CHECK_MODULES(MOWGLI, [libmowgli >= 0.4.0],
     [AC_MSG_ERROR([Cannot find libmowgli >= 0.4.0, try http://www.atheme.org/projects/mowgli.shtml])]
 )
 
+### ---------------------------------------------------------------------------
+dnl Pthread support
+dnl ===============
+PTHREAD_LIBS=
+PTHREAD_CFLAGS=
+
+AC_CHECK_LIB(pthread, pthread_create, PTHREAD_LIBS="-lpthread",
+  [AC_CHECK_LIB(pthreads, pthread_create, PTHREAD_LIBS="-lpthreads",
+	[AC_CHECK_LIB(pthreadGC2, pthread_create, PTHREAD_LIBS="-lpthreadGC2")]
+  )]
+)
+
+AC_SUBST([PTHREAD_LIBS])
+AC_SUBST([PTHREAD_CFLAGS])
+
 dnl IPv6 support
 dnl ========================
 AC_ARG_ENABLE(ipv6,
