--- a/src/sdlout/Makefile
+++ b/src/sdlout/Makefile
@@ -8,6 +8,6 @@ include ../../extra.mk
 
 plugindir := ${plugindir}/${OUTPUT_PLUGIN_DIR}
 
-CFLAGS += -std=gnu99 ${PLUGIN_CFLAGS} ${GTK_CFLAGS} ${SDL_CFLAGS}
+CFLAGS += -std=gnu99 ${PLUGIN_CFLAGS} ${PTHREAD_CFLAGS} ${GTK_CFLAGS} ${SDL_CFLAGS}
 CPPFLAGS += -I../..
-LIBS += ${GTK_LIBS} ${SDL_LIBS}
+LIBS += ${PTHREAD_LIBS} ${GTK_LIBS} ${SDL_LIBS}
