--- a/src/scrobbler/Makefile
+++ b/src/scrobbler/Makefile
@@ -13,5 +13,5 @@ PACKAGE = audacious
 plugindir := ${plugindir}/${GENERAL_PLUGIN_DIR}
 
 CFLAGS += ${PLUGIN_CFLAGS}
-CPPFLAGS += ${PLUGIN_CPPFLAGS} ${MOWGLI_CFLAGS}  ${GTK_CFLAGS} ${GLIB_CFLAGS}  ${BEEP_DEFINES} ${CURL_CFLAGS} -I../..
+CPPFLAGS += ${PLUGIN_CPPFLAGS} ${MOWGLI_CFLAGS}  ${GTK_CFLAGS} ${GLIB_CFLAGS} ${CURL_CFLAGS} -I../..
 LIBS += ${GTK_LIBS} ${GLIB_LIBS}  ${CURL_LIBS} ${MOWGLI_LIBS}
