--- a/src/skins/Makefile
+++ b/src/skins/Makefile
@@ -257,5 +257,5 @@ DATA = Skins/Classic/balance.png	\
 plugindir := ${plugindir}/${GENERAL_PLUGIN_DIR}
 
 CPPFLAGS += -std=gnu99 ${PLUGIN_CPPFLAGS} -I../..
-CFLAGS += ${PLUGIN_CFLAGS} ${BEEP_DEFINES}
+CFLAGS += ${PLUGIN_CFLAGS}
 LIBS += ${GTK_LIBS} ${GLIB_LIBS} ${PANGO_LIBS} ${CAIRO_LIBS} ${PANGOCAIRO_LIBS} ${XRENDER_LIBS} ${XCOMPOSITE_LIBS} ${MOWGLI_LIBS} -laudgui -lm
