--- a/src/streambrowser/Makefile
+++ b/src/streambrowser/Makefile
@@ -20,7 +20,7 @@ PACKAGE = audacious
 
 plugindir := ${plugindir}/${GENERAL_PLUGIN_DIR}
 
-CFLAGS += ${PLUGIN_CFLAGS} ${BEEP_DEFINES}
+CFLAGS += ${PLUGIN_CFLAGS}
 CPPFLAGS += ${PLUGIN_CPPFLAGS} ${MOWGLI_CFLAGS} ${GTK_CFLAGS} ${GLIB_CFLAGS} ${XML_CFLAGS} ${ARCH_DEFINES} -I../..
 LIBS += ${GTK_LIBS} ${GLIB_LIBS} ${MOWGLI_LIBS} ${XML_LIBS}
 
