--- a/extra.mk.in
+++ b/extra.mk.in
@@ -391,3 +391,5 @@ CUE_LIBS ?= @CUE_LIBS@
 DEBUG ?= @DEBUG@
 LIBROAR_CFLAGS ?= @LIBROAR_CFLAGS@
 LIBROAR_LIBS ?= @LIBROAR_LIBS@
+GDL_CFLAGS ?= @GDL_CFLAGS@
+GDL_LIBS ?= @GDL_LIBS@
