moodbar: Moodbar data renderer. (AUDPLUG-293)

--- a/configure.ac
+++ b/configure.ac
@@ -125,7 +125,7 @@ INPUT_PLUGINS="tonegen metronom vtx"
 OUTPUT_PLUGINS="null"
 EFFECT_PLUGINS="compressor crossfade crystalizer mixdown ladspa sndstretch stereo_plugin voice_removal echo_plugin"
 GENERAL_PLUGINS="alarm lyricwiki"
-VISUALIZATION_PLUGINS="blur_scope spectrum"
+VISUALIZATION_PLUGINS="blur_scope spectrum moodbar"
 CONTAINER_PLUGINS="m3u pls asx"
 TRANSPORT_PLUGINS="unix-io"
 
@@ -1771,6 +1771,7 @@ echo "  Visualization"
 echo "  -------------"
 echo "  Blur Scope:                             yes"
 echo "  Spectrum Analyzer:                      yes"
+echo "  Moodbar data renderer:                  yes"
 echo "  Paranormal Visualization Library:       $have_paranormal"
 echo "  projectM 0.x (GL milkdrop):             $have_projectm"
 echo "  projectM 1.x (GL milkdrop):             $have_projectm1"
