Fix linking command line order, AUDPLUG-321.

--- a/src/amidi-plug/backend-alsa/Makefile
+++ b/src/amidi-plug/backend-alsa/Makefile
@@ -9,4 +9,4 @@ plugindir := ${plugindir}/${INPUT_PLUGIN_DIR}/${AMIDIPLUG_BACKEND_DIR}
 
 CFLAGS += ${PLUGIN_CFLAGS} ${ALSA_CFLAGS}
 CPPFLAGS += ${PLUGIN_CPPFLAGS} ${ALSA_CFLAGS} ${GLIB_CFLAGS} -I../../..
-LIBS += ${ALSA_LIBS} ${GLIB_LIBS} ../pcfg/libpcfg.a
+LIBS += ${ALSA_LIBS} ../pcfg/libpcfg.a ${GLIB_LIBS}
