--- a/src/amidi-plug/backend-fluidsynth/Makefile
+++ b/src/amidi-plug/backend-fluidsynth/Makefile
@@ -9,4 +9,4 @@ plugindir := ${plugindir}/${INPUT_PLUGIN_DIR}/${AMIDIPLUG_BACKEND_DIR}
 
 CFLAGS += ${PLUGIN_CFLAGS} ${FLUIDSYNTH_CFLAGS}
 CPPFLAGS += ${PLUGIN_CPPFLAGS} ${FLUIDSYNTH_CFLAGS} ${GLIB_CFLAGS} -I../../..
-LIBS += ${FLUIDSYNTH_LIBS} ${GLIB_LIBS} ../pcfg/libpcfg.a
+LIBS += ${FLUIDSYNTH_LIBS} ../pcfg/libpcfg.a ${GLIB_LIBS}
