buildsys: Sync with upstream revision 1374aa298e72 and some minor tinkering to make it go.

--- a/configure.ac
+++ b/configure.ac
@@ -216,6 +216,7 @@ AC_SUBST(USE_CHARDET)
 dnl plugin stuff
 dnl ========================
 
+BUILDSYS_INIT
 BUILDSYS_SHARED_LIB
 
 AC_MSG_CHECKING([if you are running Apple-GCC])
