--- a/configure.ac
+++ b/configure.ac
@@ -1,6 +1,6 @@
 dnl Process this file with autoconf to produce a configure script.
 
-AC_INIT([audacious-plugins], [2.5-devel], [bugs+audacious-plugins@atheme.org])
+AC_INIT([audacious-plugins], [2.5-alpha1], [bugs+audacious-plugins@atheme.org])
 AC_PREREQ([2.59])
 
 AC_CANONICAL_HOST
@@ -131,9 +131,9 @@ TRANSPORT_PLUGINS="unix-io"
 
 dnl Check for Audacious
 
-PKG_CHECK_MODULES(AUDACIOUS, [audacious >= 2.4],
-    [ADD_PC_REQUIRES([audacious >= 2.4])],
-    [AC_MSG_ERROR([Cannot find Audacious 2.4 or later, have you installed audacious yet?])]
+PKG_CHECK_MODULES(AUDACIOUS, [audacious >= 2.5],
+    [ADD_PC_REQUIRES([audacious >= 2.5])],
+    [AC_MSG_ERROR([Cannot find Audacious 2.5 or later, have you installed audacious yet?])]
 )
 
 CFLAGS="$CFLAGS $AUDACIOUS_CFLAGS"
