null: GTK3 fixes.

--- a/configure.ac
+++ b/configure.ac
@@ -1637,7 +1637,7 @@ dnl GTK3 overrides
 dnl ==============
 
 if test $use_gtk3 = yes ; then
-    for name in adplug alarm aosd evdev-plug jack ladspa lirc modplug moodbar null paranormal projectm-1.0 sid skins spectrum streambrowser
+    for name in adplug alarm aosd evdev-plug jack ladspa lirc modplug moodbar paranormal projectm-1.0 sid skins spectrum streambrowser
     do
         echo " *** Disabling plugin because not GTK3-compatible: $name"
         CONTAINER_PLUGINS=`sed s/$name// << EOF
