openal: Use pkg-config for detection. Patch from Carlo Bramini, AUDPLUG-332.

--- a/extra.mk.in
+++ b/extra.mk.in
@@ -393,3 +393,5 @@ LIBROAR_CFLAGS ?= @LIBROAR_CFLAGS@
 LIBROAR_LIBS ?= @LIBROAR_LIBS@
 GDL_CFLAGS ?= @GDL_CFLAGS@
 GDL_LIBS ?= @GDL_LIBS@
+OPENAL_CFLAGS ?= @OPENAL_CFLAGS@
+OPENAL_LIBS ?= @OPENAL_LIBS@
