Add albumart to configure.

--- a/configure.ac
+++ b/configure.ac
@@ -127,7 +127,7 @@ dnl These plugins are always built.
 INPUT_PLUGINS="tonegen metronom vtx"
 OUTPUT_PLUGINS="null"
 EFFECT_PLUGINS="compressor crossfade crystalizer mixdown ladspa sndstretch stereo_plugin voice_removal echo_plugin"
-GENERAL_PLUGINS="alarm"
+GENERAL_PLUGINS="alarm albumart"
 VISUALIZATION_PLUGINS="blur_scope spectrum"
 CONTAINER_PLUGINS="m3u pls asx"
 TRANSPORT_PLUGINS="unix-io"
@@ -1816,6 +1816,7 @@ echo "  Bluetooth audio support:                $have_bluetooth"
 echo "  MacOS Dock Album Art plugin:            $have_dockalbumart"
 echo "  Streambrowser:                          $enable_streambrowser"
 echo "  LyricWiki viewer:                       $enable_lyricwiki"
+echo "  Album Art widget:                       yes"
 echo
 echo "  Effect"
 echo "  ------"
