cairo-spectrum: cairo spectrum analyzer plugin

--- a/configure.ac
+++ b/configure.ac
@@ -128,7 +128,7 @@ INPUT_PLUGINS="tonegen metronom vtx"
 OUTPUT_PLUGINS="null"
 EFFECT_PLUGINS="compressor crossfade crystalizer mixdown ladspa sndstretch stereo_plugin voice_removal echo_plugin"
 GENERAL_PLUGINS="alarm albumart"
-VISUALIZATION_PLUGINS="blur_scope spectrum"
+VISUALIZATION_PLUGINS="blur_scope spectrum cairo-spectrum"
 CONTAINER_PLUGINS="m3u pls asx"
 TRANSPORT_PLUGINS="unix-io"
 
@@ -1835,6 +1835,7 @@ echo "  Visualization"
 echo "  -------------"
 echo "  Blur Scope:                             yes"
 echo "  Spectrum Analyzer:                      yes"
+echo "  Cairo Spectrum Analyzer:                yes"
 echo "  Moodbar data renderer:                  $enable_moodbar"
 echo "  Paranormal Visualization Library:       $have_paranormal"
 echo "  projectM 1.x (GL milkdrop):             $have_projectm1"
