unix-io: Remove "UNIX" from UI elements.  Add about window.  Use "interface show error".

--- a/src/unix-io/Makefile
+++ b/src/unix-io/Makefile
@@ -1,10 +1,10 @@
 PLUGIN = unix-io${PLUGIN_SUFFIX}
 
-SRCS = unix-io.c
+SRCS = gtk.c unix-io.c
 
 include ../../buildsys.mk
 include ../../extra.mk
 
 plugindir := ${plugindir}/${TRANSPORT_PLUGIN_DIR}
 
-CFLAGS += ${PLUGIN_CFLAGS}
+CFLAGS += ${PLUGIN_CFLAGS} -I../..
