unix-io: Fix CPPFLAGS.

--- a/src/unix-io/Makefile
+++ b/src/unix-io/Makefile
@@ -7,4 +7,5 @@ include ../../extra.mk
 
 plugindir := ${plugindir}/${TRANSPORT_PLUGIN_DIR}
 
-CFLAGS += ${PLUGIN_CFLAGS} -I../..
+CPPFLAGS += -I../..
+CFLAGS += ${PLUGIN_CFLAGS}
