sdlout: Implement volume control.

--- a/src/sdlout/Makefile
+++ b/src/sdlout/Makefile
@@ -10,4 +10,4 @@ plugindir := ${plugindir}/${OUTPUT_PLUGIN_DIR}
 
 CPPFLAGS += -I../.. ${PTHREAD_CFLAGS} ${GTK_CFLAGS} ${SDL_CFLAGS}
 CFLAGS += -std=gnu99 ${PLUGIN_CFLAGS}
-LIBS += ${PTHREAD_LIBS} ${GTK_LIBS} ${SDL_LIBS}
+LIBS += -lm ${PTHREAD_LIBS} ${GTK_LIBS} ${SDL_LIBS}
